# IELTS-Practice-System

./: AGENTS.md  passage_parser.py
develop/: JSON数据格式说明.md  脚本开发项目配置.md
develop/html_to_json/: answer_parser.py
develop/scripts/ingest/: README.md  __init__.py  audit_conversion.py  config_loader.py  datamodel.py  html_exam_parser.py  html_to_json.py  pyproject.toml  repair_boolean_question_types.py  run_full_conversion.py  settings.default.json  settings.local.json
develop/scripts/ingest/tests/: __init__.py  test_boolean_questions.py
develop/提交审查/: 99e645876444a2297bb55f7f03c97c780828570b审查报告.md
developer/tests/: test_answer_parser.py
output/: AGENTS.md  manifest.json
output/chunks/: hard_01.json  hard_02.json  hard_03.json  hard_04.json  hard_05.json  hard_06.json  medium_01.json  medium_02.json  medium_03.json  standard_01.json  standard_02.json  standard_03.json  standard_04.json  standard_05.json  standard_06.json
output/json/: e001.json  e002.json  e003.json  e004.json  e005.json  e006.json  e007.json  e008.json  e009.json  e010.json  e012.json  e013.json  e014.json  e015.json  e016.json  e017.json  e018.json  e019.json  e020.json  e021.json  e022.json  e023.json  e025.json  e026.json  e027.json  e028.json  e029.json  e030.json  e031.json  e032.json  e034.json  e035.json  e036.json  e037.json  e039.json  e040.json  e041.json  e042.json  e047.json  e049.json  (+77 more)
output/reports/: statistics.json
scripts/: __init__.py  generate_outputs.py  serialize_exams.py
scripts/ingest/: __init__.py  (+6 more)
tests/: test_passage_parser.py  test_serialize_exams.py
(+148 files in other folders)
